# vercel_api_gnpng

./: README.md  pyproject.toml  requirements.txt  vercel.json
api/: gencx.py  index.py
